Code correction (part 1)

--- a/simple_QABot.ipynb
+++ b/simple_QABot.ipynb
@@ -192,13 +192,13 @@
    },
    "outputs": [],
    "source": [
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter#, CharacterTextSplitter\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
-    "from langchain_community.document_loaders import PyPDFLoader#, DirectoryLoader\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
     "\n",
     "from langchain_community.vectorstores import Chroma\n",
     "\n",
-    "from langchain_community.embeddings import HuggingFaceEmbeddings#GPT4AllEmbeddings\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "\n",
     "from langchain_community.llms import CTransformers\n",
     "\n",
@@ -492,7 +492,7 @@
     "  return ans['result']\n",
     "\n",
     "# Check\n",
-    "fileName = \"/content/drive/MyDrive/RAG_LangChain/inp_docs/llm.pdf\"\n",
+    "fileName = \"inp_docs/llm.pdf\"\n",
     "ques = \"What is large language model?\"\n",
     "helpfulAns = retrievalQA(fileName, ques)\n",
     "print(helpfulAns)"
