--- a/simple_QABot.ipynb
+++ b/simple_QABot.ipynb
@@ -519,7 +519,7 @@
       "source": [
         "# Retriever \n",
         "def retriever(fileName):\n",
-        "  # Indexing\n",
+        "  # Ingestion\n",
         "  docsInfo = pdfLoader(fileName)\n",
         "  txtAfterSplitting = txtSplitStep(docsInfo)\n",
         "  vec_db = createVecDB(txtAfterSplitting)\n",
@@ -537,7 +537,7 @@
       "source": [
         "# Retriever (for input is directory path)\n",
         "def retrieverFromDir(dirPath):\n",
-        "  # Indexing \n",
+        "  # Ingestion\n",
         "  docsInfo = pdfLoaderFromDir(dirPath)\n",
         "  txtAfterSplitting = txtSplitStep(docsInfo)\n",
         "  vec_db = createVecDB(txtAfterSplitting)\n",
@@ -547,13 +547,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "N8Ahaxno8XiO"
       },
       "outputs": [],
       "source": [
-        "# LLM (GPT-2)\n",
+        "# LLM (LLaMA-2)\n",
         "def defineLLM():\n",
         "  modelName = \"TheBloke/Llama-2-7B-GGML\"\n",
         "  llmModel = CTransformers(model=modelName, model_type=\"llama\")\n",
